implement basic logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.19)
 project(cpp_utils)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-Werror -Wall -Wextra -Wpedantic")
+set(CMAKE_CXX_FLAGS " -Wall -Wextra -Wpedantic")
 
 include_directories(include)
 
-add_executable(cpp_utils main.cpp src/SimpleTimer.cpp include/SimpleTimer.h src/BenchmarkTimer.cpp include/BenchmarkTimer.h include/TimeMeasurement.h src/Random.cpp include/Random.h)
+add_executable(cpp_utils main.cpp src/SimpleTimer.cpp include/SimpleTimer.h src/BenchmarkTimer.cpp include/BenchmarkTimer.h include/TimeMeasurement.h src/Random.cpp include/Random.h src/Logger.cpp include/Logger.h)
