--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,32 @@
-cmake_minimum_required(VERSION 3.19)
-project(cpp_utils)
+cmake_minimum_required(VERSION 3.10)
+project(CppUtils VERSION 1.0.0 DESCRIPTION "set of cpp utilities")
 
+include(GNUInstallDirs)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS " -Wall -Wextra -Wpedantic")
 
-include(FetchContent)
-FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-enable_testing()
-
-add_executable(
-        my_test
+set(SOURCE_FILES
+        src/BenchmarkTimer.cpp
+        src/Logger.cpp
         src/Random.cpp
-        include/Random.h
-        test/RandomTest.cpp
-)
-target_link_libraries(
-        my_test
-        gtest_main
-)
+        src/SimpleTimer.cpp)
 
-include(GoogleTest)
-gtest_discover_tests(my_test)
+add_library(${PROJECT_NAME} ${SOURCE_FILES})
 
-include_directories(include)
+target_include_directories(${PROJECT_NAME} PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+        PRIVATE src)
 
-add_executable(cpp_utils main.cpp src/SimpleTimer.cpp include/SimpleTimer.h src/BenchmarkTimer.cpp include/BenchmarkTimer.h include/TimeMeasurement.h src/Random.cpp include/Random.h src/Logger.cpp include/Logger.h)
+set_target_properties(${PROJECT_NAME} PROPERTIES
+        VERSION ${PROJECT_VERSION}
+        SOVERSION 1)
+
+install(TARGETS ${PROJECT_NAME} EXPORT CppUtilsConfig
+        ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
+
+install(EXPORT CppUtilsConfig DESTINATION share/CppUtils/cmake)
+
+export(TARGETS ${PROJECT_NAME} FILE CppUtilsConfig.cmake)
